# j2templater

./: .gitignore  Makefile  README.md  image_templates.py  pyproject.toml
tests/: __init__.py  test_image_templates.py
tests/fixtures/node.in/: template.ini
tests/fixtures/php.in/: Dockerfile.j2  template.ini
